# ash

./: 404.html  CHANGELOG.md  Dockerfile  ISSUES.md  LICENSE  README.md  ash_memory_server.py  ash_safety_server.py  ash_setup.py  index.html  pyproject.toml
architecture/: index.html
continuity/: AGENT_INSTRUCTIONS.md  CONTINUITY_FRAMEWORK.md  HANDOFF_PATTERNS.md  README.md  SESSION_START_GUIDE.md  THREAD_SCHEMA.md
coordination/: AGENT_INSTRUCTIONS.md  COORDINATION_FRAMEWORK.md  DECISION_MATRIX.md  DISPATCH_PATTERNS.md  FALLBACK_CHAINS.md  PITFALLS.md  README.md
dev-pipeline/: index.html
examples/: demo_prompt_injection.py  demo_runaway_command.py  demo_secret_leak.py
glossary/: index.html
guardrails/: AGENT_INSTRUCTIONS.md  ALERT_GUIDE.md  AUDIT_TRAIL_GUIDE.md  CONTENT_SANITIZATION.md  DEV_PIPELINE.md  GUARDRAILS_FRAMEWORK.md  PROTECTED_FILES_GUIDE.md  README.md  SECRET_MANAGEMENT.md
how-we-got-here/: index.html
implementations/: index.html
javascripts/: gcs-fix.js
lessons-and-failure-modes/: index.html
memory/: AGENT_INSTRUCTIONS.md  FEEDBACK_GUIDE.md  INDEX_TEMPLATE.md  MEMORY_FRAMEWORK.md  PITFALLS.md  README.md  SCHEMA.md
memory-and-continuity/: index.html
model-coordination/: index.html
registry/: README.md  ash_registry.py  generate_hooks.py  index.json  tool_manifest_schema.json  trust.py  wrap_tool.py
scheduling-and-operations/: index.html
search/: search_index.json
security-and-guardrails/: index.html
skills/: AGENT_INSTRUCTIONS.md  CREATING_A_SKILL.md  FEEDBACK_LOG_SPEC.md  README.md  SKILLS_FRAMEWORK.md  SKILL_TEMPLATE.md
(+20 files in other folders)
