[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ash-safety"
version = "0.1.0"
description = "Agent Safety Harness — MCP server that intercepts agent tool calls"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["fastmcp==1.0"]

[project.optional-dependencies]
dev = ["pytest", "anthropic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
