[project]
name = "ash"
version = "0.1.0-dev"
description = "Agent Safety Harness — MCP-native safety, memory, and skills for Claude deployments"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
service = [
    "google-cloud-firestore>=2.19",
]

[tool.pytest.ini_options]
testpaths = ["servers"]
python_files = ["test_*.py"]
